Update background photo

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
             <a class="nav-link js-scroll active" href="#home">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll" href="#work">Portfolio</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#service">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Work</a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#blog">Blog</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
           </li>
@@ -71,14 +71,14 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/eleah-background.jpeg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Eleah Burman</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer</span><strong class="text-slider"></strong><span class="text-slider-items">Python</span><strong class="text-slider"></strong><span class="text-slider-items">JavaScript</span><strong class="text-slider"></strong><span class="text-slider-items">React</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -145,11 +145,12 @@
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      About me
+                      About Me
                     </h5>
                   </div>
                   <p class="lead">
                     I am a software developer and creative problem solver who thrives when working on a team and collaborative environment. Utilizing my creative skills and creative background from my artwork and apply it to my projects while also keeping the functionality of the project.  I like enhancing a project with ideas that start out as a dream and end up in reality.
+                  </p>
                 </div>
               </div>
             </div>
